Chore: Add client run task to gradle